# snu-semantics-s26

./: .gitignore  .ocamlformat  README.md  dune-project  formal_english.opam  snu_semantics.opam
first_order_language/: dune  interp.ml  interp.mli  syntax.ml  syntax.mli
formal_english/: README.md  dune  interp.mli  syntax.mli
lib/: interp.ml  syntax.ml  syntax.mli
test/: dune
