(lang dune 3.18)

(name formal_english)

(generate_opam_files true)

(source
 (github young-52/formal-english))

(authors "Junyoung Park <bloomwayz@snu.ac.kr>")

(maintainers "Junyoung Park <bloomwayz@snu.ac.kr>")

(license MIT)

(package
 (name formal_english)
 (synopsis "English for formal semantics")
 (description "English for formal semantics")
 (depends ocaml)
 (tags ("language")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
