(lang dune 3.18)

(name snu_semantics)

(generate_opam_files true)

(source
 (github young-52/snu-semantics-s26))

(authors "Junyoung Park <bloomwayz@snu.ac.kr>")

(maintainers "Junyoung Park <bloomwayz@snu.ac.kr>")

(license MIT)

(package
 (name snu_semantics)
 (synopsis "SNU 108.311 Semantics")
 (description "SNU 108.311 Semantics Spring 2026")
 (depends ocaml)
 (tags ("language")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
